# api-fastapi

./: .coverage  pyproject.toml
fast_zero/: app.py  schemas.py
tests/: test_app.py
