[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Mateus Sombrio <mateusombrio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.4"
ruff = "^0.7.2"

[tool.poetry.group.pytest.dependencies]
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest --cov=fast_zero -vv'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warmigs'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
preview = true
lint.select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"